--- a/css/main.css
+++ b/css/main.css
@@ -36,3 +36,21 @@ p{
     color: #f2f2f2;
     font-size: 15px;
 }
+/* STYLE FOR GALLERY */
+div.gallery{
+    margin: 5px;
+    border: 1px solid #ccc;
+    float: left;
+    width: 200px;
+}
+div.gallery:hover{
+    border: 1px solid darkblue;
+}
+div.gallery img{
+    width=100%;
+    height: 200px;
+}
+div.desc{
+    padding: 15px;
+    text-align: center;
+}
