--- a/css/main.css
+++ b/css/main.css
@@ -54,3 +54,25 @@ div.desc{
     padding: 15px;
     text-align: center;
 }
+#cert{
+    text-align: center;
+    color: maroon;
+}
+div#certi:hover{
+    border: 1px solid darkblue;
+}
+div#spec{
+    padding: 15px;
+    text-align: center;
+}
+div#certi img{
+    width=100%;
+    height:100%;
+}
+div#certi{
+    margin: 5px;
+    border: 1px solid #ccc;
+    float: left;
+    width: 100%
+        heght: 100%;
+}
