--- a/css/main.css
+++ b/css/main.css
@@ -23,7 +23,7 @@ html,body{
 }
 .content{
    margin: 4% 10% 4% 10%;
-    height: 100%;
+    min-height: 100%;
     font-size: 16px;
 }
 p{
@@ -47,6 +47,7 @@ div.gallery:hover{
     border: 1px solid darkblue;
 }
 div.gallery img{
+    
     width=100%;
     height: 200px;
 }
@@ -66,13 +67,24 @@ div#spec{
     text-align: center;
 }
 div#certi img{
+    align-content: center;
     width=100%;
     height:100%;
 }
 div#certi{
     margin: 5px;
     border: 1px solid #ccc;
-    float: left;
+   
     width: 100%
         heght: 100%;
+}
+div#box{
+    margin: 10% 30% 30% 30%;
+    width: 300px;
+    height: 60px;
+    border: 1px solid darkblue;
+    border-radius: 5px;
+    padding: 10px 10px 10px 10px;
+    background-color: maroon;
+    color: white;
 }
